Theme changed to Holo Grey for android versions 14+

--- a/MyGradeTracker2/app/src/main/res/values-v11/styles.xml
+++ b/MyGradeTracker2/app/src/main/res/values-v11/styles.xml
@@ -1,13 +1,10 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         // Theme.AppCompat.Light.DarkActionBar
         <!-- Customize your theme here. -->
+        // API through 11 - 13
 
     </style>
-    <style name="AppTheme" parent="AppBaseTheme">
-
-    </style>
-
 </resources>
+
