--- a/MyGradeTracker2/app/src/main/res/values/styles.xml
+++ b/MyGradeTracker2/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        // Theme.AppCompat.Light.DarkActionBar
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        //
         <!-- Customize your theme here. -->
 
     </style>
