--- a/MyGradeTracker2/app/src/main/res/layout/activity_add_grade.xml
+++ b/MyGradeTracker2/app/src/main/res/layout/activity_add_grade.xml
@@ -34,12 +34,13 @@
         android:layout_height="wrap_content"
         android:hint="Your Score"
         android:maxLines="1"
-        android:inputType="number"
+        android:maxLength="3"
         android:ems="5"
         android:id="@+id/yourScoreET"
         android:layout_alignBottom="@+id/yourScoreTextView"
         android:layout_toRightOf="@+id/yourScoreTextView"
-        android:layout_toEndOf="@+id/yourScoreTextView" />
+        android:layout_toEndOf="@+id/yourScoreTextView"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -57,6 +58,7 @@
         android:layout_height="wrap_content"
         android:hint="Max Score"
         android:maxLines="1"
+        android:maxLength="3"
         android:id="@+id/maxScoreET"
         android:ems="5"
         android:layout_alignBottom="@+id/maxScoreTextView"
