--- a/MyGradeTracker2/app/src/main/res/layout/activity_add_grade.xml
+++ b/MyGradeTracker2/app/src/main/res/layout/activity_add_grade.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
 
     tools:context=".addGradeActivity"
-    >
+    android:id="@+id/addGrade">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,7 +15,31 @@
         android:textSize="35dp"
         android:id="@+id/newGradeTitle"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:text="Assignment Name: "
+        android:id="@+id/textView"
+        android:layout_below="@+id/newGradeTitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Assn Name"
+        android:maxLines="1"
+        android:maxLength="3"
+        android:ems="5"
+        android:id="@+id/assignmentNameET"
+        android:inputType="number"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,11 +47,9 @@
         android:text="Your Score:"
         android:textSize="24dp"
         android:id="@+id/yourScoreTextView"
-        android:layout_below="@+id/newGradeTitle"
+        android:layout_above="@+id/maxScoreET"
         android:layout_alignLeft="@+id/newGradeTitle"
-        android:layout_alignStart="@+id/newGradeTitle"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="35dp"/>
+        android:layout_alignStart="@+id/newGradeTitle" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -37,10 +59,10 @@
         android:maxLength="3"
         android:ems="5"
         android:id="@+id/yourScoreET"
+        android:inputType="number"
         android:layout_alignBottom="@+id/yourScoreTextView"
         android:layout_toRightOf="@+id/yourScoreTextView"
-        android:layout_toEndOf="@+id/yourScoreTextView"
-        android:inputType="number" />
+        android:layout_toEndOf="@+id/yourScoreTextView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,10 +70,9 @@
         android:text="Max Score:"
         android:textSize="24dp"
         android:id="@+id/maxScoreTextView"
-        android:layout_below="@+id/yourScoreTextView"
+        android:layout_above="@+id/radioGroup"
         android:layout_alignLeft="@+id/yourScoreTextView"
-        android:layout_alignStart="@+id/yourScoreTextView"
-        android:layout_marginBottom="15dp"/>
+        android:layout_alignStart="@+id/yourScoreTextView" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -70,14 +91,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/radioGroup"
-        android:layout_below="@+id/maxScoreTextView"
         android:gravity="left"
-        android:layout_marginLeft="125dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_above="@+id/newGradeButton"
+        android:layout_alignRight="@+id/newGradeTitle"
+        android:layout_alignEnd="@+id/newGradeTitle">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -126,9 +143,9 @@
         android:text="Create New Grade"
         android:id="@+id/newGradeButton"
         android:onClick="onClickToMyClasses"
-        android:layout_below="@+id/radioGroup"
+        android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/maxScoreTextView"
-        android:layout_alignStart="@+id/maxScoreTextView"
-        />
+        android:layout_alignStart="@+id/maxScoreTextView" />
+
 
 </RelativeLayout>
